Manifests/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: orchestrator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: DOCKERHUB_USER/api-gateway:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
  namespace: orchestrator
spec:
  selector:
    app: api-gateway
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
      name: http
